--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,29 @@
         xmlns:local="clr-namespace:FootballManager"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <Border Background="#2e3137" CornerRadius="50"  Margin="20">
+        <Grid   Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Margin="23,22,23,22">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="33*"/>
+            </Grid.RowDefinitions>
+            <DataGrid x:Name="gridManagers" HorizontalAlignment="Left" Margin="10,10,0,162" Width="390" SelectionChanged="gridManagers_SelectionChanged" Grid.RowSpan="2"/>
+            <Label  Content="Name: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,173,0,0" VerticalAlignment="Top" Width="323" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.Row="1"/>
+            <TextBox  x:Name="txtName"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,182,395,0" Grid.Row="1"/>
+            <Label  Content="Specializ.: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,218,0,0" VerticalAlignment="Top" Width="323" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.Row="1"/>
+            <TextBox  x:Name="txtSpecialization"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,224,395,0" Grid.Row="1"/>
+            <Label  Content="Experience: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,259,0,0" VerticalAlignment="Top" Width="323" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.Row="1"/>
+            <TextBox  x:Name="txtExperience"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,268,395,0" Grid.Row="1"/>
+            <Button Content="Add" x:Name="btnAdd" HorizontalAlignment="Left" Height="30" Margin="357,197,0,0" VerticalAlignment="Top" Width="127" Click="btnAdd_Click" Grid.Row="1"/>
+            <Button Content="Load" x:Name="btnLoad" HorizontalAlignment="Left" Height="30" Margin="357,259,0,0" VerticalAlignment="Top" Width="127" Click="btnLoad_Click" Grid.Row="1"/>
+            <Button Content="Update" x:Name="btnUpdate" HorizontalAlignment="Left" Height="30" Margin="555,140,0,0" VerticalAlignment="Top" Width="127" Click="btnUpdate_Click" Grid.Row="1"/>
+            <Label  Content="Name: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="405,20,0,0" VerticalAlignment="Top" Width="277" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.RowSpan="2"/>
+            <Label  Content="Specializ. "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="405,44,0,0" VerticalAlignment="Top" Width="277" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.Row="1"/>
+            <Label  Content="Exp.: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="405,88,0,0" VerticalAlignment="Top" Width="277" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.Row="1"/>
+            <TextBox  x:Name="txtName1"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="492,5,51,0" Grid.Row="1" Height="29"/>
+            <TextBox  x:Name="txtSpecialization1"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="492,51,51,0" Grid.Row="1" Height="26"/>
+            <TextBox  x:Name="txtExperience2"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="492,93,51,0" Grid.Row="1" Height="30"/>
+            <Button Content="Remove" x:Name="btnRemove" HorizontalAlignment="Left" Height="30" Margin="405,140,0,0" VerticalAlignment="Top" Width="127" Click="btnRemove_Click"  Grid.Row="1"/>
+        </Grid>
+    </Border>
 </Window>
