--- a/LoginWindow.xaml
+++ b/LoginWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="FootballManager.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Login" Height="300" Width="300" FontSize="14" Background="#04c582">
+        Title="Login" Height="300" Width="300" FontSize="14" Background="#04c582" WindowStartupLocation="CenterScreen">
 
     <Border Background="#2e3137" CornerRadius="20" Margin="20">
         <StackPanel>
