--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,28 +4,31 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FootballManager"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="452" Width="800" WindowStartupLocation="CenterScreen">
+        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
 
     <Grid  Background="Gray" Margin="23,22,23,21">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="188*"/>
+            <ColumnDefinition Width="189*"/>
+        </Grid.ColumnDefinitions>
 
-        <DataGrid x:Name="gridManagers" HorizontalAlignment="Left" Margin="10,10,0,162" Width="390" SelectionChanged="gridManagers_SelectionChanged" Grid.RowSpan="2"/>
-        <Label  Content="Name: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,238,0,0" VerticalAlignment="Top" Width="367" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}"/>
-        <TextBox  x:Name="txtName"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,247,395,0"/>
-        <Label  Content="Specializ.: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,274,0,0" VerticalAlignment="Top" Width="367" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}"/>
-        <TextBox  x:Name="txtSpecialization"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,283,395,0"/>
-        <Label  Content="Experience: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,313,0,0" VerticalAlignment="Top" Width="367" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}"/>
-        <TextBox  x:Name="txtExperience"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,322,395,0"/>
-        <Button Content="Add" x:Name="btnAdd" HorizontalAlignment="Left" Height="30" Margin="595,324,0,0" VerticalAlignment="Top" Width="127" Click="btnAdd_Click"/>
-        <Button Content="Load" x:Name="btnLoad" HorizontalAlignment="Left" Height="30" Margin="405,324,0,0" VerticalAlignment="Top" Width="127" Click="btnLoad_Click"/>
-        <Button Content="Update" x:Name="btnUpdate" HorizontalAlignment="Left" Height="30" Margin="595,140,0,0" VerticalAlignment="Top" Width="127" Click="btnUpdate_Click"/>
-        <Label  Content="Name: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="405,5,0,0" VerticalAlignment="Top" Width="317" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}"/>
-        <Label  Content="Specializ. "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="405,50,0,0" VerticalAlignment="Top" Width="317" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}"/>
-        <Label  Content="Exp.: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="405,96,0,0" VerticalAlignment="Top" Width="317" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}"/>
-        <TextBox  x:Name="txtName1"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="492,10,51,0" Height="29"/>
-        <TextBox  x:Name="txtSpecialization1"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="492,57,51,0" Height="25"/>
-        <TextBox  x:Name="txtExperience2"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="492,102,51,0" Height="26"/>
-        <Button Content="Remove" x:Name="btnRemove" HorizontalAlignment="Left" Height="30" Margin="405,140,0,0" VerticalAlignment="Top" Width="127" Click="btnRemove_Click"/>
-        <Button Content="Check Appointments" x:Name="btnAppointment" HorizontalAlignment="Left" Height="54" Margin="451,215,0,0" VerticalAlignment="Top" Width="252" Click="btnAppointment_Click"/>
+        <DataGrid x:Name="gridManagers" HorizontalAlignment="Left" Margin="10,10,0,162" Width="750" />
+        <Label  Content="Name: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,238,0,0" VerticalAlignment="Top" Width="367" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.ColumnSpan="2"/>
+        <TextBox  x:Name="txtName"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,247,17,0"/>
+        <Label  Content="Specializ.: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,274,0,0" VerticalAlignment="Top" Width="367" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.ColumnSpan="2"/>
+        <TextBox  x:Name="txtSpecialization"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,283,17,0"/>
+        <Label  Content="Experience: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,313,0,0" VerticalAlignment="Top" Width="367" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.ColumnSpan="2"/>
+        <TextBox  x:Name="txtExperience"  FontSize="15"  TextWrapping="WrapWithOverflow"  Text="" VerticalAlignment="Top" Margin="129,322,17,0"/>
+        <Button Content="Add" x:Name="btnAdd" HorizontalAlignment="Left" Height="30" Margin="219,324,0,0" VerticalAlignment="Top" Width="127" Click="btnAdd_Click" Grid.Column="1"/>
+        <Button Content="Load" x:Name="btnLoad" HorizontalAlignment="Left" Height="30" Margin="29,324,0,0" VerticalAlignment="Top" Width="127" Click="btnLoad_Click" Grid.Column="1"/>
+        <Button Content="Update" x:Name="btnUpdate" HorizontalAlignment="Left" Height="30" Margin="219,140,0,0" VerticalAlignment="Top" Width="127" Click="btnUpdate_Click" Grid.Column="1"/>
+        <Label  Content="Name: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="29,5,0,0" VerticalAlignment="Top" Width="317" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.Column="1"/>
+        <Label  Content="Specializ. "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="29,50,0,0" VerticalAlignment="Top" Width="317" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.Column="1"/>
+        <Label  Content="Exp.: "  FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="29,96,0,0" VerticalAlignment="Top" Width="317" Height="39" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" Grid.Column="1"/>
+        <TextBox  x:Name="txtName1" Text="" FontSize="15"  TextWrapping="WrapWithOverflow"  Margin="118,12,51,0" Height="25" VerticalAlignment="Top" Grid.Column="1" />
+        <TextBox  x:Name="txtSpecialization1" Text=""  FontSize="15"  TextWrapping="WrapWithOverflow"  VerticalAlignment="Top" Margin="118,57,51,0" Height="25" Grid.Column="1" />
+        <TextBox  x:Name="txtExperience2" Text="" FontSize="15"  TextWrapping="WrapWithOverflow"  VerticalAlignment="Top" Margin="118,103,51,0" Height="25" Grid.Column="1" />
+        <Button Content="Remove" x:Name="btnRemove" HorizontalAlignment="Left" Height="30" Margin="29,140,0,0" VerticalAlignment="Top" Width="127" Click="btnRemove_Click" Grid.Column="1"/>
+        <Button Content="Check Appointments" x:Name="btnAppointment" HorizontalAlignment="Left" Height="54" Margin="75,215,0,0" VerticalAlignment="Top" Width="252" Click="btnAppointment_Click" Grid.Column="1"/>
     </Grid>
 </Window>
